syntax = "proto3";

option csharp_namespace = "WelsonJS.Service";

package heartbeat;

service HeartbeatService {
    rpc CheckHeartbeat (stream HeartbeatRequest) returns (stream HeartbeatResponse);
    rpc FetchPendingEvents (FetchEventsRequest) returns (stream FetchEventsResponse);
}

message HeartbeatRequest {
    bool is_alive = 1;
}

message HeartbeatResponse {
    bool is_alive = 1;
}

message FetchEventsRequest {
    string client_id = 1;
}

message FetchEventsResponse {
    string event_type = 1;
    repeated string args = 2;
}
